<resources>
    <string name="app_name_label" translatable="false">RFCx Guardian</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="pls_fill_email">Please fill email</string>
    <string name="pls_fill_password">Please fill password</string>
    <string name="incorrect_username_password">Incorrect username or password</string>
    <string name="an_error_occurred">Service unavailable</string>
    <string name="or">OR</string>
    <string name="powered_by">Powered by</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="coordinates">Coordinates</string>
    <string name="login_sign_in_button_label">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset your password</string>
    <string name="enter_email">Enter your email to receive reset link</string>
    <string name="cancel">Cancel</string>
    <string name="reset_link_send">Reset link send to your email.</string>
    <string name="reset">Reset</string>
    <string name="continue_text">Continue</string>
    <string name="error_common">An error occurred. Please try again.</string>
    <string name="record_audio_permission_msg">Guardian App would like to record audio</string>
    <string name="camera_permission_msg">Guardian App would like to use your camera</string>
    <string name="read_storage_permission_msg">Guardian App would like to read your storage</string>
    <string name="go_to_setting">Settings</string>
    <string name="report_submit_button_label">Submit</string>
    <string name="report_note_hint">Put some notes here</string>
    <string name="some_photo_already_exists">Some photo already exists</string>
    <string name="these_photos_already_exists">These photos already exist</string>
    <string name="this_photo_already_exists">This photo already exists</string>
    <string name="dialog_loading">Loading…</string>
    <string name="receive_alert_notification">Receive alert notification</string>
    <string name="system_options">System Options</string>
    <string name="system_options_subtitle">Choose sounds, vibration, and importance</string>
    <string name="events">Events</string>
    <string name="no_projects_selected">No projects selected</string>
    <string name="other_project">, &amp; %d other project</string>
    <string name="other_projects">, &amp; %d other projects</string>
    <string name="notifications">Notifications</string>
    <string name="start_demo">Send a test notification</string>
    <string name="notification_will_sent">A notification will be sent within 30 seconds to verify that you can receive alerts</string>
    <string name="perform_test">Perform test</string>
    <string name="least_one_event">You need at least one event in your currently selected project to be able send a test</string>
    <string name="dd_coordinates" translatable="false">DD</string>
    <string name="ddm_coordinates" translatable="false">DDM</string>
    <string name="dms_coordinates" translatable="false">DMS</string>
    <string name="dd_coordinates_format" translatable="false">0.00000°N 0.00000°E</string>
    <string name="ddm_coordinates_format" translatable="false">0°0.0000\'N 0°0.0000\'E</string>
    <string name="dms_coordinates_format" translatable="false">0°0\'0.0\"N 0°0\'0.0\"E</string>
    <string name="last_month">Last\nMonth</string>
    <string name="last_week">Last\nWeek</string>
    <string name="last_24_hours">Last\n24 hours</string>
    <string name="now">Now</string>
    <string name="tab_to_record_label">Tap and hold the button to record notes</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="in_air_plane_mode">Unable to determine your location</string>
    <string name="pls_off_air_plane_mode">Please turn off airplane mode</string>
    <string name="location">Location</string>
    <string name="photos">Photos</string>
    <string name="menu_new_events">New Events</string>
    <string name="menu_submitted_reports">Submitted Reports</string>
    <string name="menu_draft_reports">Draft Reports</string>
    <string name="menu_profile">Profile</string>
    <string name="see_report_detail">See Detail</string>
    <string name="report_time_second">Just now</string>
    <string name="report_minutes_format" translatable="false">%dm</string>
    <string name="report_hr_format" translatable="false">%dh</string>
    <string name="report_day_format" translatable="false">%dd</string>
    <string name="report_week_format" translatable="false">%dw</string>
    <string name="common_ok" translatable="false">OK</string>
    <string name="common_none">None</string>
    <string name="button_ok" translatable="false">OK</string>
    <string name="yesterday">Yesterday</string>
    <string name="no_internet_connection">No internet, Please try again.</string>
    <string name="unable_to_submit_no_internet_connection">Unable to submit while there is no connection.</string>
    <string name="unable_to_submit_on_airplane_mode">Unable to submit while in airplane mode.</string>
    <string name="chainsaw">Chainsaw</string>
    <string name="gunshot">Gunshot, gunfire</string>
    <string name="vehicle">Vehicle</string>
    <string name="human_voice">Human voice</string>
    <string name="dog_bark">Bark</string>
    <string name="elephant">Elephant</string>
    <string name="fire">Fire</string>
    <string name="other">other</string>
    <string name="profile_sign_out_label">Sign out</string>
    <string name="something_is_wrong">Something went wrong. Please try again later.</string>
    <string name="profile_aditional_label">Additional</string>
    <string name="profile_app_version_label">App version</string>
    <string name="profile_feedback_label">Feedback</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="feedback_submitted">Feedback submitted. Thank you for your time :)</string>
    <string name="feedback_submission_failed">Feedback submission failed! Please try again.</string>
    <string name="snackbar_retry">RETRY</string>
    <string name="profile_send_feedback">Send feedback</string>
    <string name="from">From:</string>
    <string name="app_feedback_share_ideas">Leave app feedback or share your ideas</string>
    <string name="maximum_number_of_attachments">You have reached max selectable. Try remove some items before adding more attachments.</string>
    <string name="account">Account</string>
    <string name="notification_tracking_title">On-duty and tracking enabled</string>
    <string name="notification_traking_message_format">%d minutes recorded</string>
    <string name="required">Required!</string>
    <string name="detected_at">detected at</string>
    <string name="set_alerts">Set alerts</string>
    <string name="choose_which_projects">Choose which projects to receive alert notifications</string>
    <string name="network_not_available">network not available</string>
    <string name="no_content_project">There is no accessible project in this account.\nPlease contact an administrator\nor create the project in Arbimon platform.</string>
    <string name="logout">logout</string>
    <string name="select">Select</string>
    <string name="refresh">refresh</string>
    <string name="failed_receive_notification">Failed to receive notification from %s</string>
    <string name="failed_unsubscribe_receive_notification">Failed to unsubscribe receive notification from %s</string>
    <string name="project_could_not_refreshed">The project could not be refreshed.</string>
    <string name="all_projects">All projects</string>
    <string name="not_have_permission">You don’t have permission to use this project. Ask the project owner to change your role.</string>
    <string name="num_more_then_99" translatable="false">99+</string>
    <string name="not_have_stream">No sites in this project</string>
    <string name="can_not_open_the_report">Can’t open the report that has already been sent.</string>
    <string name="not_have_draft_reports">You don’t have any draft reports</string>
    <string name="unsent">Queued</string>
    <string name="sending">Sending</string>
    <string name="sent">Sent</string>
    <string name="incident_ref" translatable="false">#%s</string>
    <string name="not_submitted_reports_yet">You haven’t submitted any reports yet</string>
    <string name="create_report">Create Report</string>
    <string name="open_in_maps">Open in maps</string>
    <string name="guardian_event_detail">Event Detail</string>
    <string name="not_have_events">No events since the last incident</string>
    <string name="create_report_steps">Report</string>
    <string name="create_report_title">%d steps remaining</string>
    <string name="create_report_title_one_step">1 step remaining</string>
    <string name="last_step">Report last step</string>
    <string name="when_investigate">When did you investigate?</string>
    <string name="today">Today</string>
    <string name="other_date">Other...</string>
    <string name="edit">Edit</string>
    <string name="what_time">What time did you investigate?</string>
    <string name="do_not_future_time">Investigation time cannot be in the future</string>
    <string name="do_not_past_time">Investigation time cannot be before events</string>
    <string name="what_investigate">What did you investigate? <i>Select all that apply</i></string>
    <string name="logging">Logging</string>
    <string name="poaching">Poaching</string>
    <string name="what_evidence">What <b>logging evidence</b> did you encounter? <i>Select all that apply</i></string>
    <string name="cut_down_trees">Cut down trees</string>
    <string name="cleared_areas">Cleared areas</string>
    <string name="logging_equipment">Logging equipment</string>
    <string name="loggers_at_site">Loggers at Site</string>
    <string name="illegal_camps">Illegal camps</string>
    <string name="fires_burned_areas">Fires/burned areas</string>
    <string name="how_much_damage">How much damage was done to the area?</string>
    <string name="no_visible">No visible tree disruption found</string>
    <string name="small_trees_cut_down">Minimal - a few trees cut down (1 truck)</string>
    <string name="medium_trees_cut_down">Moderate destruction (2-5 trucks)</string>
    <string name="large_area_clear_cut">Substantially clear-cut (5+ trucks of wood)</string>
    <string name="what_scale">What was the <b>scale of the logging</b> operation?</string>
    <string name="small">Small (subsistence, agriculture etc)</string>
    <string name="large">Large (commercial scale, heavy equipment etc)</string>
    <string name="what_scale_poaching">What was the <b>scale of the poaching</b> operation?</string>
    <string name="small_poaching">Small (individual, informal)</string>
    <string name="large_poaching">Large (group, coordinated)</string>
    <string name="what_poaching_evidence">What <b>poaching evidence</b> did you encounter? <i>Select all that apply</i></string>
    <string name="bullet_shells">Bullet shells / gun remains</string>
    <string name="footprints">Footprints (human)</string>
    <string name="dog_tracks">Dog tracks</string>
    <string name="what_action">What <b>action</b> was taken? <i>Select all that apply</i></string>
    <string name="confiscated_equipment">Confiscated equipment</string>
    <string name="collected_evidence">Collected evidence</string>
    <string name="issue_a_warning">Issue a warning</string>
    <string name="damaged_machinery">Damaged machinery</string>
    <string name="add_evidence">Add evidence</string>
    <string name="save_draft">Save Draft</string>
    <string name="add_photos">Photos (up to 5)</string>
    <string name="add_notes">Text notes</string>
</resources>