<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/margin_padding_normal"
	tools:context=".view.report.create.EvidenceFragment">
	
	<TextView
		android:id="@+id/whenTextView"
		style="@style/RangerText.Body"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/what_evidence"
		app:layout_constraintTop_toTopOf="parent" />
	
	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="@dimen/margin_padding_small"
		android:layout_marginBottom="@dimen/margin_padding_small"
		android:overScrollMode="never"
		android:paddingBottom="@dimen/bottom_bar_height"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@id/whenTextView">
		
		<LinearLayout
			android:id="@+id/whatEvidenceLinearLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:checkedButton="@+id/whatEvidenceRadioButton"
			android:orientation="vertical"
			app:layout_constraintTop_toBottomOf="@id/whenTextView">
			
			<CheckBox
				android:id="@+id/cutDownTreesCheckBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_padding_normal"
				android:layout_marginTop="@dimen/margin_padding_small"
				android:layout_marginEnd="@dimen/margin_padding_normal"
				android:background="@drawable/radio_selector"
				android:button="@color/transparent"
				android:padding="@dimen/margin_padding_normal"
				android:text="@string/cut_down_trees"
				android:textColor="@drawable/radio_text_color"
				app:layout_constraintTop_toBottomOf="@id/whatActionTextView" />
			
			<CheckBox
				android:id="@+id/clearedAreasCheckBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_padding_normal"
				android:layout_marginTop="@dimen/margin_padding_small"
				android:layout_marginEnd="@dimen/margin_padding_normal"
				android:background="@drawable/radio_selector"
				android:button="@color/transparent"
				android:padding="@dimen/margin_padding_normal"
				android:text="@string/cleared_areas"
				android:textColor="@drawable/radio_text_color"
				app:layout_constraintTop_toBottomOf="@id/whatActionTextView" />
			
			<CheckBox
				android:id="@+id/loggingEquipmentCheckBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_padding_normal"
				android:layout_marginTop="@dimen/margin_padding_small"
				android:layout_marginEnd="@dimen/margin_padding_normal"
				android:background="@drawable/radio_selector"
				android:button="@color/transparent"
				android:padding="@dimen/margin_padding_normal"
				android:text="@string/logging_equipment"
				android:textColor="@drawable/radio_text_color"
				app:layout_constraintTop_toBottomOf="@id/whatActionTextView" />
			
			<CheckBox
				android:id="@+id/loggersAtSiteCheckBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_padding_normal"
				android:layout_marginTop="@dimen/margin_padding_small"
				android:layout_marginEnd="@dimen/margin_padding_normal"
				android:background="@drawable/radio_selector"
				android:button="@color/transparent"
				android:padding="@dimen/margin_padding_normal"
				android:text="@string/loggers_at_site"
				android:textColor="@drawable/radio_text_color"
				app:layout_constraintTop_toBottomOf="@id/whatActionTextView" />
			
			<CheckBox
				android:id="@+id/illegalCampsCheckBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_padding_normal"
				android:layout_marginTop="@dimen/margin_padding_small"
				android:layout_marginEnd="@dimen/margin_padding_normal"
				android:background="@drawable/radio_selector"
				android:button="@color/transparent"
				android:padding="@dimen/margin_padding_normal"
				android:text="@string/illegal_camps"
				android:textColor="@drawable/radio_text_color"
				app:layout_constraintTop_toBottomOf="@id/whatActionTextView" />
			
			<CheckBox
				android:id="@+id/firesBurnedAreasCheckBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_padding_normal"
				android:layout_marginTop="@dimen/margin_padding_small"
				android:layout_marginEnd="@dimen/margin_padding_normal"
				android:background="@drawable/radio_selector"
				android:button="@color/transparent"
				android:padding="@dimen/margin_padding_normal"
				android:text="@string/fires_burned_areas"
				android:textColor="@drawable/radio_text_color"
				app:layout_constraintTop_toBottomOf="@id/whatActionTextView" />
			
			<CheckBox
				android:id="@+id/evidenceOfPoachingCheckBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_padding_normal"
				android:layout_marginTop="@dimen/margin_padding_small"
				android:layout_marginEnd="@dimen/margin_padding_normal"
				android:background="@drawable/radio_selector"
				android:button="@color/transparent"
				android:padding="@dimen/margin_padding_normal"
				android:text="@string/evidence_of_poaching"
				android:textColor="@drawable/radio_text_color"
				app:layout_constraintTop_toBottomOf="@id/whatActionTextView" />
			
			<CheckBox
				android:id="@+id/noneCheckBox"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/margin_padding_normal"
				android:layout_marginTop="@dimen/margin_padding_small"
				android:layout_marginEnd="@dimen/margin_padding_normal"
				android:background="@drawable/radio_selector"
				android:button="@color/transparent"
				android:padding="@dimen/margin_padding_normal"
				android:text="@string/common_none"
				android:textColor="@drawable/radio_text_color"
				app:layout_constraintTop_toBottomOf="@id/whatActionTextView" />
		</LinearLayout>
	</ScrollView>
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/nextStepButton"
		style="@style/RangerButton.GreenButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:text="@string/next"
		app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
