<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/margin_padding_normal"
	tools:context=".view.report.create.ScaleFragment">
	
	<TextView
		android:id="@+id/whatScaleTextView"
		style="@style/RangerText.Body"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/what_scale"
		app:layout_constraintTop_toTopOf="parent" />
	
	<RadioGroup
		android:id="@+id/scaleRadioGroup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin_padding_small"
		app:layout_constraintTop_toBottomOf="@id/whatScaleTextView">
		
		<RadioButton
			android:id="@+id/smallRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginStart="@dimen/margin_padding_small"
			android:layout_marginTop="@dimen/margin_padding_small"
			android:layout_marginEnd="@dimen/margin_padding_small"
			android:background="@drawable/radio_selector"
			android:button="@color/transparent"
			android:paddingStart="@dimen/margin_padding_normal"
			android:paddingEnd="@dimen/margin_padding_normal"
			android:text="@string/small"
			android:textColor="@drawable/radio_text_color" />
		
		<RadioButton
			android:id="@+id/largeRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginStart="@dimen/margin_padding_small"
			android:layout_marginTop="@dimen/margin_padding_small"
			android:layout_marginEnd="@dimen/margin_padding_small"
			android:background="@drawable/radio_selector"
			android:button="@color/transparent"
			android:paddingStart="@dimen/margin_padding_normal"
			android:paddingEnd="@dimen/margin_padding_normal"
			android:text="@string/large"
			android:textColor="@drawable/radio_text_color" />
		
		<RadioButton
			android:id="@+id/notSureRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginStart="@dimen/margin_padding_small"
			android:layout_marginTop="@dimen/margin_padding_small"
			android:layout_marginEnd="@dimen/margin_padding_small"
			android:background="@drawable/radio_selector"
			android:button="@color/transparent"
			android:paddingStart="@dimen/margin_padding_normal"
			android:paddingEnd="@dimen/margin_padding_normal"
			android:text="@string/not_sure"
			android:textColor="@drawable/radio_text_color" />
		
		<RadioButton
			android:id="@+id/noneRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginStart="@dimen/margin_padding_small"
			android:layout_marginTop="@dimen/margin_padding_small"
			android:layout_marginEnd="@dimen/margin_padding_small"
			android:background="@drawable/radio_selector"
			android:button="@color/transparent"
			android:paddingStart="@dimen/margin_padding_normal"
			android:paddingEnd="@dimen/margin_padding_normal"
			android:text="@string/common_none"
			android:textColor="@drawable/radio_text_color" />
	</RadioGroup>
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/nextStepButton"
		style="@style/RangerButton.GreenButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:text="@string/next"
		app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
