<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/margin_padding_normal"
	tools:context=".view.report.create.InvestigationTypeFragment">
	
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/siteNameTextView"
		style="@style/RangerText.Body"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/margin_padding_normal"
		android:textStyle="bold"
		app:layout_constraintTop_toTopOf="parent"
		tools:text="Site Z" />
	
	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/whatInvestigateTextView"
		style="@style/RangerText.SubTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/what_investigate"
		app:layout_constraintTop_toBottomOf="@id/siteNameTextView" />
	
	<RadioGroup
		android:id="@+id/typeRadioGroup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/margin_padding_small"
		app:layout_constraintTop_toBottomOf="@id/whatInvestigateTextView">
		
		<RadioButton
			android:id="@+id/loggingRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="@dimen/margin_padding_small"
			android:background="@drawable/radio_selector"
			android:button="@color/transparent"
			android:paddingStart="@dimen/margin_padding_normal"
			android:paddingEnd="@dimen/margin_padding_normal"
			android:text="@string/logging"
			android:textColor="@drawable/radio_text_color" />
		
		<RadioButton
			android:id="@+id/poachingRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="@dimen/margin_padding_small"
			android:background="@drawable/radio_selector"
			android:button="@color/transparent"
			android:padding="@dimen/margin_padding_normal"
			android:text="@string/poaching"
			android:textColor="@drawable/radio_text_color" />
		
		<RadioButton
			android:id="@+id/otherRadioButton"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="@dimen/margin_padding_small"
			android:background="@drawable/radio_selector"
			android:button="@color/transparent"
			android:paddingStart="@dimen/margin_padding_normal"
			android:paddingEnd="@dimen/margin_padding_normal"
			android:text="@string/other_specify_to_3"
			android:textColor="@drawable/radio_text_color" />
	</RadioGroup>
	
	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/nextStepButton"
		style="@style/RangerButton.GreenButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:enabled="false"
		android:text="@string/next"
		app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
